examples/test/conf/HTTPRoute/Match/Gateway.yaml
# HTTP Match 测试套件 Gateway
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-match-gateway
  namespace: edgion-test
spec:
  gatewayClassName: public-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 31020
    - name: https
      protocol: HTTPS
      port: 31021
      hostname: "*.example.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: http-match-tls
            namespace: edgion-test
