examples/test/conf/HTTPRoute/Match/HTTPRoute_wildcard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wildcard-test
  namespace: edgion-default
spec:
  parentRefs:
    - name: http-match-gateway
      namespace: edgion-test
  hostnames:
    - "*.wildcard.example.com"  # Wildcard hostname
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /wildcard-test
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001
    - matches:
        - path:
            type: Exact
            value: /health
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001
